# github-events

./: .gitignore  DEPLOYMENT.md  README.md  bq_client.py  config.py  deploy.sh  main.py  process_messages.py  pubsub_client.py  pyproject.toml  requirements.txt  setup-github-secrets.sh
.github/workflows/: deploy.yml  etl-cron.yml
